Modifying code in index.html and style.css, to adjust modal width depending on the screen size of the device, and also to fix <span> tags alignment for the .close-btn class of the .modal-content class.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,7 @@ header h1 {
     padding: 10px 16px;
     background-color: var(--grisoscuro);
     color: white;
+    text-align: center;
 }
 
 .modal-body {
@@ -545,6 +546,10 @@ header h1 {
     #footer-links li {
         display: block;
         border: none;
+    }
+
+    .modal-content {
+        width: 90%;
     }
 
 }
